# rust-http-cli

./: Cargo.toml  README.md
src/: http.rs  main.rs
