[package]
name = "httpcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "=3.2.16", default-features = false, features = [
    "std",
    "derive",
    "unicode",
] }
clap_derive = { version = "=3.2.15" }
colored = "2" 
jsonxf = "1.1"
mime = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.144"

